k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-service
spec:
  selector:
    app: mern-app
  ports:
    - port: 80
      targetPort: 5000
