k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mern-route
spec:
  to:
    kind: Service
    name: mern-service
